--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -235,11 +235,11 @@
           <div class="links">
           {%- if entry.abstract %}
             {%- if entry.abstract contains '://' %}
-             <a href="{{ entry.abstract }}" class="btn btn-sm z-depth-0" role="button">Abs</a>
+             <a href="{{ entry.abstract }}" class="btn btn-sm z-depth-0" role="button">Abstract</a>
              {% elsif entry.abstract contains '.pdf' %}
-             <a href="{{ entry.abstract | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Abs</a>
+             <a href="{{ entry.abstract | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Abstract</a>
              {%- else -%}
-             <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
+             <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
              {%- endif %}
           {%- endif %}
           {%- if entry.arxiv %}
@@ -253,9 +253,9 @@
           {%- endif %}
           {%- if entry.pdf %}
             {% if entry.pdf contains '://' -%}
-            <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+            <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">Paper</a>
             {%- else -%}
-            <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
+            <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Paper</a>
             {%- endif %}
           {%- endif %}
           {%- if entry.supp %}
@@ -296,6 +296,9 @@
           {%- endif %}
           {%- if entry.psyarxiv %}
             <a href="http://psyarxiv.com/{{ entry.psyarxiv }}" class="btn btn-sm z-depth-0" role="button">PsyArXiv</a>
+          {%- endif %}
+          {%- if entry.tryit %}
+            <a href="{{ entry.tryit }}" class="btn btn-sm z-depth-0" role="button">Try It</a>
           {%- endif %}
 
           </div>
