--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -74,7 +74,7 @@ layout: default
               
               <a href="https://comma.eecs.qmul.ac.uk/timbre-tools-hackathon/"><img src="assets/img/projects/tthackathon.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="Timbre Tools Hackathon logo" width=100%></a>
           <br><br>
-              <a href="https://seeingmusic.app/"><img src="assets/img/projects/seeingmusic-logo-2.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="Seeing Music digital exhibit and game logo" width=100%></a>
+              <a href="https://seeingmusic.app/"><img src="assets/img/projects/seeingmusic-logo-2.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px; width: calc(100% - 10px);" alt="Seeing Music digital exhibit and game logo" width=100%></a>
 <!--           {% if page.livetweets -%} -->
             <!-- live Twitter feed -->
 <!--             {%- include livetweets.html %} -->
