--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -73,8 +73,11 @@ layout: default
         <div class="col-12 col-md-4">
               
               <a href="https://comma.eecs.qmul.ac.uk/timbre-tools-hackathon/"><img src="assets/img/projects/tthackathon.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="Timbre Tools Hackathon logo" width=100%></a>
-          <br><br>
-              <a href="https://seeingmusic.app/"><img src="assets/img/projects/seeingmusic-logo-2.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px; width: calc(100% - 10px);" alt="Seeing Music digital exhibit and game logo" width=100%></a>
+              <br>
+              <a href="https://seeingmusic.app/"><img src="assets/img/projects/seeingmusic-logo-2.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="Seeing Music digital exhibit and game logo" width=100%></a>
+              <br>
+              <a href="https://timbre.fun/"><img src="assets/img/projects/timbre-fun-gpt.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="timbre.fun digital game logo" width=100%></a>
+              <br>
 <!--           {% if page.livetweets -%} -->
             <!-- live Twitter feed -->
 <!--             {%- include livetweets.html %} -->
