--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -72,6 +72,8 @@ layout: default
         
         <div class="col-12 col-md-4">
               
+              <a href="https://comma.eecs.qmul.ac.uk/creative-audio-synthesis-and-interfaces-workshop/"><img src="creative-audio-synthesis-and-interfaces-workshop/images/casi_workshop_banner.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="CASI Workshop Logo" width=100%></a>
+              <br><br>
               <a href="https://comma.eecs.qmul.ac.uk/timbre-tools-hackathon/"><img src="assets/img/projects/tthackathon.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px;" alt="Timbre Tools Hackathon logo" width=100%></a>
               <br><br>
               <a href="https://seeingmusic.app/"><img src="assets/img/projects/seeingmusic-logo-2.png" style="border: 1px solid rgba(0,0,0,.2); border-radius: 13px; padding: 20px;" alt="Seeing Music digital exhibit and game logo" width=100%></a>
